First python prototype
